--- a/values.html
+++ b/values.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Nature SMP SkyGen Ultimate List + Trade Checker</title>
+<title>Nature SMP SkyGen List + Trade Checker</title>
 <style>
 body{margin:0;font-family:Inter,Arial,sans-serif;background:#020617;color:#e5e7eb;overflow-x:hidden;}
 header{text-align:center;padding:30px;z-index:10;position:relative;}
@@ -167,6 +167,7 @@ const categories={
 {name:"Fire Tools",icon:"netherite_hoe.png",value:70},
 {name:"Fire Mace",icon:"netherite_sword.png",value:72},
 {name:"Netherite Kit",icon:"netherite_chestplate.png",value:65},
+{name:"Mace Kit",icon:"mace.png",value:58},    
 {name:"Totem Kit",icon:"totem_of_undying.png",value:40},
 {name:"Elytra Kit",icon:"elytra.png",value:58},
 {name:"Pot Kit",icon:"potion.png",value:55},
@@ -292,4 +293,5 @@ function closeModal(){document.getElementById("modal").style.display="none";}
 </script>
 </body>
 </html>
+
 
