--- a/values.html
+++ b/values.html
@@ -201,6 +201,7 @@ const categories={
 {name:"Iron Boots",icon:"iron_boots.png",value:2}
 ],
 "WEAPONS":[
+{name:"Mace",icon:"https://raw.githubusercontent.com/InventivetalentDev/minecraft-assets/1.21/assets/minecraft/textures/item/mace.png",value:8}
 {name:"Netherite Sword",icon:"netherite_sword.png",value:5},
 {name:"Diamond Sword",icon:"diamond_sword.png",value:4},
 {name:"Iron Sword",icon:"iron_sword.png",value:3},
@@ -293,5 +294,6 @@ function closeModal(){document.getElementById("modal").style.display="none";}
 </script>
 </body>
 </html>
+
 
 
