--- a/values.html
+++ b/values.html
@@ -160,6 +160,7 @@ const categories={
 {name:"Owner Kit",icon:"nether_star.png",value:68},
 {name:"Co-Owner Kit",icon:"beacon.png",value:66},
 {name:"Owner x Co-Owner Bundle",icon:"white_shulker_box.png",value:69,block:true},
+{name:"Xmas Kit",icon:"red_shulker_box.png",value:90,block:true},
 {name:"Galaxy Kit",icon:"netherite_chestplate.png",value:85},
 {name:"Galaxy Tools",icon:"netherite_pickaxe.png",value:80},
 {name:"Galaxy Mace",icon:"netherite_axe.png",value:78},
@@ -205,11 +206,17 @@ const categories={
 {name:"Diamond Sword",icon:"diamond_sword.png",value:4},
 {name:"Iron Sword",icon:"iron_sword.png",value:3},
 {name:"Bow",icon:"bow.png",value:2}
+{name:"Xmas Sword",icon:"netherite_sword.png",value:82},
+{name:"Xmas Mace",icon:"https://raw.githubusercontent.com/InventivetalentDev/minecraft-assets/1.21/assets/minecraft/textures/item/mace.png",value:80}
+
 ],
 "TOOLS":[
 {name:"Netherite Pickaxe",icon:"netherite_pickaxe.png",value:5},
 {name:"Diamond Pickaxe",icon:"diamond_pickaxe.png",value:4},
 {name:"Iron Pickaxe",icon:"iron_pickaxe.png",value:3}
+{name:"Xmas Pickaxe",icon:"netherite_pickaxe.png",value:81},
+{name:"Xmas Axe",icon:"netherite_axe.png",value:79}
+   
 ],
 "ORES":[
 {name:"Netherite Ingot",icon:"netherite_ingot.png",value:5},
@@ -293,6 +300,7 @@ function closeModal(){document.getElementById("modal").style.display="none";}
 </script>
 </body>
 </html>
+
 
 
 
